# casuya-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
casuya_core/: __init__.py  cache.py  cli.py  compiler.py  compressor.py  config.py  constants.py  dependencies.py  exceptions.py  loaders.py  manifest.py  metadata.py  migrations.py  packager.py  parsers.py  security.py  signatures.py  utils.py  validator.py  versioning.py
docs/: README.md
examples/: simple_lesson.py
schemas/: lesson.schema.json  manifest.schema.json  metadata.schema.json
tests/: test_cache.py  test_loaders.py  test_migrations.py  test_parsers.py  test_security.py  test_signatures.py  test_versioning.py
